2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b71

        * Fix: Prevent the random block from grabbing an album highlight as its
          image.

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b70

        * Fix: Mambo popups failed to operate because the option var wasn't
          set on systems with register_globals disabled - how did this
          ever work?

        * Fix: Eliminate two shutterfly/print_photos notices in edit_appearance

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b69

        * Fix: I believe that this should fix the issue that some users have
          had with extremely large Gallery installations during the upgrade
          script, where the albums just don't show up on the page at all.

2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b68

        * Fix: Display the 'view comments in nested album' links for all users
          in commentboxtop.inc.  This was restricted to admin/owner only, so it
          broke navigation when view comments was allowed for all users.

        * Change: Fix uninitialized variable notice

2004-07-26  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b67

        * Fix: Trim trailing spaces from setup vars where no-trailing-slash is
          set.  This prevents the "/usr/bin /pnmtojpeg" issue

        * Fix: The addition of the 'view comments' for everyone was exposing
          hidden photos since view_comments.php had been written with only
          the owner/admin in mind.

2004-07-25  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b66

	* Change: Remove bastard newlines from delete_user and delete_album that were causing
	  jscript errors in Firefox.

2004-07-25  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b65

	* Fix: In some strange permission sets we got non fitting error messages.
	  - When upload_tmp_dir is not in open_basedir
	  - When userdir and /or files in it are is not writeable.
