@@ -1,3 +1,10 @@
+2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b72
+
+	* Change: Completely eliminate the "embedded_inside_type" variable,
+	  since *everything* is auto-detected anyway and it really wasn't used.  
+	  GeekLog still requires one variable, but it was already dealt with as
+	  needed.
+
 2004-07-27  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b71
 
         * Fix: Prevent the random block from grabbing an album highlight as its
